--- a/INTITA/Modules/LogInScreen/LogInCells/WrongPasswordEmailTableViewCell.xib
+++ b/INTITA/Modules/LogInScreen/LogInCells/WrongPasswordEmailTableViewCell.xib
@@ -12,12 +12,15 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="61" id="KGk-i7-Jjw" customClass="WrongPasswordEmailTableViewCell" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T1x-gx-Q3Q">
-                        <rect key="frame" x="28" y="0.0" width="264" height="61"/>
+                        <rect key="frame" x="28" y="5" width="264" height="19"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="19" id="uo5-O9-ESX"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -25,7 +28,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="T1x-gx-Q3Q" secondAttribute="bottom" id="6y6-uL-kgZ"/>
-                    <constraint firstItem="T1x-gx-Q3Q" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="89f-f4-PKB"/>
+                    <constraint firstItem="T1x-gx-Q3Q" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="89f-f4-PKB"/>
                     <constraint firstAttribute="trailing" secondItem="T1x-gx-Q3Q" secondAttribute="trailing" constant="28" id="Pl0-DH-zce"/>
                     <constraint firstItem="T1x-gx-Q3Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="vED-g5-961"/>
                 </constraints>
