--- a/INTITA/Modules/ProfileSettings/Cells/HeaderSettingsTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettings/Cells/HeaderSettingsTableViewCell.xib
@@ -65,13 +65,16 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="LS6-sP-pQX">
                                 <rect key="frame" x="35" y="135" width="100" height="25"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="editBtn" translatesAutoresizingMaskIntoConstraints="NO" id="gxU-0g-PEF">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oAg-qy-WdZ">
                                         <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="25" id="Vte-Jl-NOx"/>
-                                            <constraint firstAttribute="height" constant="25" id="rvh-i8-e2m"/>
+                                            <constraint firstAttribute="width" constant="25" id="cx7-bc-nhC"/>
                                         </constraints>
-                                    </imageView>
+                                        <state key="normal" image="editBtn"/>
+                                        <connections>
+                                            <action selector="editImageButtonTapped:" destination="qpw-P1-R1X" eventType="touchUpInside" id="jjc-6e-NK2"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZFB-qA-jDg">
                                         <rect key="frame" x="29" y="0.0" width="71" height="25"/>
                                         <constraints>
@@ -115,7 +118,7 @@
             <connections>
                 <outlet property="avatarView" destination="i3H-IY-XyA" id="532-sE-tVp"/>
                 <outlet property="editButton" destination="ZFB-qA-jDg" id="nJ8-7N-fIw"/>
-                <outlet property="editImageView" destination="gxU-0g-PEF" id="8Zn-Ow-cy7"/>
+                <outlet property="editImageButton" destination="oAg-qy-WdZ" id="oFg-CN-INE"/>
                 <outlet property="mainView" destination="xd5-AK-fV5" id="YcO-Bm-33a"/>
                 <outlet property="nameLabel" destination="KYg-vH-o0I" id="nNH-Wo-UjJ"/>
                 <outlet property="specializationLabel" destination="hIR-Sc-RFl" id="zkg-01-TMP"/>
