--- a/INTITA/Modules/ProfileSettings/Cells/ButtonTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettings/Cells/ButtonTableViewCell.xib
@@ -26,14 +26,14 @@
                         <rect key="frame" x="148" y="14" width="144" height="47"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVa-u2-cjk">
-                                <rect key="frame" x="0.0" y="0.0" width="117.5" height="47"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <rect key="frame" x="0.0" y="0.0" width="116" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="go to list">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mDD-R0-BCk">
-                                <rect key="frame" x="121.5" y="0.0" width="22.5" height="47"/>
+                                <rect key="frame" x="120" y="0.0" width="24" height="47"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <state key="normal" image="skipArrow"/>
                             </button>
@@ -54,6 +54,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="titleLabel" destination="n2h-Hk-22e" id="yRR-Ne-9Ww"/>
+                <outlet property="valueButton" destination="TVa-u2-cjk" id="eod-l9-lBm"/>
             </connections>
             <point key="canvasLocation" x="2.8985507246376816" y="57.254464285714285"/>
         </tableViewCell>
