--- a/INTITA/Modules/ProfileSettings/Cells/ButtonTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettings/Cells/ButtonTableViewCell.xib
@@ -18,22 +18,25 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name title label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2h-Hk-22e">
                         <rect key="frame" x="28" y="14" width="112" height="47"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="HYw-f2-apV">
-                        <rect key="frame" x="148" y="14" width="144" height="47"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="HYw-f2-apV">
+                        <rect key="frame" x="148" y="14" width="160" height="47"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVa-u2-cjk">
-                                <rect key="frame" x="0.0" y="0.0" width="116" height="47"/>
+                                <rect key="frame" x="0.0" y="0.0" width="144" height="47"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="go to list">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mDD-R0-BCk">
-                                <rect key="frame" x="120" y="0.0" width="24" height="47"/>
+                                <rect key="frame" x="148" y="0.0" width="12" height="47"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="12" id="Xas-1I-IES"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <state key="normal" image="skipArrow"/>
                             </button>
@@ -46,7 +49,7 @@
                     <constraint firstAttribute="bottom" secondItem="n2h-Hk-22e" secondAttribute="bottom" constant="14" id="LsM-Ds-ucy"/>
                     <constraint firstItem="n2h-Hk-22e" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="Pe6-l6-liE"/>
                     <constraint firstAttribute="bottom" secondItem="HYw-f2-apV" secondAttribute="bottom" constant="14" id="S4k-AY-DnN"/>
-                    <constraint firstAttribute="trailing" secondItem="HYw-f2-apV" secondAttribute="trailing" constant="28" id="W7D-W6-TDL"/>
+                    <constraint firstAttribute="trailing" secondItem="HYw-f2-apV" secondAttribute="trailing" constant="12" id="W7D-W6-TDL"/>
                     <constraint firstItem="HYw-f2-apV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="YDn-Uu-tby"/>
                     <constraint firstItem="HYw-f2-apV" firstAttribute="leading" secondItem="n2h-Hk-22e" secondAttribute="trailing" constant="8" id="xot-Hi-RXX"/>
                 </constraints>
